Fixed gravatar css issues. (Space between comments and vertical alignment).

--- a/assets/css/benchmarks.less
+++ b/assets/css/benchmarks.less
@@ -194,6 +194,7 @@ p {
 
 .gravatar {
   float: left;
+  padding: 0px 5px 10px 5px;
 }
 
 .comment {
@@ -251,24 +252,7 @@ p {
 
 /* User profiles */
 #profile {
-  background-color: #eee;
-  .rounded;
-  width: 400px;
-  border: 1px solid #ccc;
-
-  tr {
-  }
-
   td {
-    padding: 10px;
-  }
-
-  tr td a {
-    //color: black;
-    font-weight: bold;
-    background-color: white;
     padding: 5px;
-    .rounded;
-    border: 1px solid @border-gray;
   }
 }
